Index access fixed, navbar overlap fixed, admin not yet fixed.

--- a/app/static/css/foundation.css
+++ b/app/static/css/foundation.css
@@ -92,6 +92,10 @@ select {
   margin-bottom: 0;
   max-width: 62.5em;
   *zoom: 1; }
+.rowtop {
+  margin-top: 60px;}
+.bigrowtop {
+  margin-top: 75px;}
   .row:before, .row:after {
     content: " ";
     display: table; }
